@@ -1,4 +1,4 @@
-package com.doomedcat17.gpupriceapi.service;
+package com.doomedcat17.gpupriceapi.service.currency;
 
 import com.doomedcat17.gpupriceapi.dto.CurrencyDto;
 import com.doomedcat17.gpupriceapi.service.mapper.CurrencyDtoMapper;
@@ -6,7 +6,6 @@ import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -17,6 +16,6 @@ public class CurrencyDtoService {
 
     public List<CurrencyDto> getAllCurrencies() {
         return currencyService.getAllCurrencies().stream()
-                .map(currency -> currencyDtoMapper.toCurrencyDto(currency)).collect(Collectors.toList());
+                .map(currency -> currencyDtoMapper.toCurrencyDto(currency)).toList();
     }
 }
